--- a/views/logged.hbs
+++ b/views/logged.hbs
@@ -1,5 +1,9 @@
 <section class="index-page">
-  <p class="success">
-    You have been successfully logged in!
-  </p>
+  <img class="avatar" src='{{image}}' />
+  <h1>
+    Hello {{username}}
+  </h1>
+  <a href="/user/profile">Profile</a>
+  <a href="/user/profile/settings">Settings</a>
+  <a href="/auth/logout">Log Out</a>
 </section>
